@@ -1,5 +1,6 @@
 * Sun Aug 26 2007 Jesse Keating <jkeating@redhat.com>
 - Add better support for %packages syntax using native pykickstart
+- Add a cache dir for pungi (/var/cache/pungi) and a cli option to override
 
 * Sat Aug 25 2007 Jesse Keating <jkeating@redhat.com>
 - Use a kickstart file as input now (for cdsize and package manifest)
